fix z-index and add logo

--- a/style/base.css
+++ b/style/base.css
@@ -16,24 +16,24 @@
 
 .main {
   padding-top: 30px;
-  /* position: relative; */
 }
 
 .sidebar {
   position: fixed;
   right: 0;
-  bottom: 60px;
+  bottom: 200px;
   margin: 0;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   font-size: 12px;
   border-left: 1px solid #eee;
-  /* background-color: #fefefe; */
 }
 
 .footer {
+  position: relative;
   font-size: 90%;
   font-style: italic;
   text-align: center;  
+  z-index: 1000;
 }
 
 table.table {
